[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/stage_score.gd" id="1_script"]

[node name="StageScore" type="PanelContainer"]
custom_minimum_size = Vector2(0, 200)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ScoreSection" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/ScoreSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Stage Complete!"
horizontal_alignment = 1

[node name="WordsFound" type="Label" parent="MarginContainer/HBoxContainer/ScoreSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Words Found: 5"
horizontal_alignment = 1

[node name="BasePoints" type="Label" parent="MarginContainer/HBoxContainer/ScoreSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Base Points: 100"
horizontal_alignment = 1

[node name="BonusPoints" type="Label" parent="MarginContainer/HBoxContainer/ScoreSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Bonus: +50"
horizontal_alignment = 1

[node name="TotalPoints" type="Label" parent="MarginContainer/HBoxContainer/ScoreSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Total: 150"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="ShopButton" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "Shop"

[node name="ContinueButton" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "Continue"
